--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Blank</title>
+    <title>Kenny's Vacations</title>
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -18,10 +18,17 @@
   </head>
   <body>
     <div class="container">
+      <h1>Kenny's Vacations</h1>
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Under Construction</h1>
-          <h4><a href="/api">Read My API Documentation</a></h4>
+          <form class="form-inline" id="newVacationForm">
+            <div class="form-group">
+              <input type="text" class="form-control" name="country" placeholder="Vacation">
+            </div>
+            <button type="submit" class="btn btn-default">Add a vacation!</button>
+          </form>
+          <div id="vacationTarget">
+          </div>
         </div>
       </div>
     </div>
