--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,8 @@
         <div class="col-md-8 col-md-offset-2">
           <form class="form-inline" id="newVacationForm">
             <div class="form-group">
-              <input type="text" class="form-control" name="country" placeholder="Vacation">
+              <label for ="place">Where?</label>
+              <input type="text" class="form-control" name="place" placeholder="Vacation">
             </div>
             <button type="submit" class="btn btn-default">Add a vacation!</button>
           </form>
