--- a/views/index.html
+++ b/views/index.html
@@ -41,9 +41,9 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="photo">Pictures?</label>
+              <label class="control-label col-sm-2" for="photos">Pictures?</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" name="photo" placeholder="Add image link here">
+                <input type="text" class="form-control" name="photos" placeholder="Add image link here">
               </div>
             </div>
             <button type="submit" class="btn btn-default center-block">Add a vacation!</button>
